improved edit form: added drop down box for parent dataset and users in edit form added extra buttons to default to save when hitting enter on edit form changed the description of preview tags from "resolution" to "scale" changed color of delete/remove buttons to red fixed bug so that user with ID 0 can be added to the dataset. got proper network graphs: added vis.js and vis.min.css for displaying good looking network graphs. applied new theory to tags display: changed tags fontsize according to new probability theory to make common tags less dominant. new permissions-limitation: files are only visible to people who have at least viewing permission for the dataset.

--- a/styles/main.less
+++ b/styles/main.less
@@ -305,7 +305,14 @@ div.files {
 	padding: 5px 5px 5px 5px;
 	margin: 5px 5px 5px 5px;
 	display: inline-block;
+}
+div .floatspace {
+	width: 100%;
 	float: left;
+	clear: left;
+	clear: right;
+	text-align: center;
+	margin: auto;
 }
 .inpdesc {
 	padding: 2px 5px 0px -5px;
@@ -363,6 +370,27 @@ li.li2 {
 		color: #d4d4d4;
 	}
 }
+
+.custom-combobox {
+	position: relative;
+    display: inline-block;
+}
+
+.custom-combobox-toggle {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    margin-left: -1px;
+    padding: 0;
+}
+
+.custom-combobox-input {
+    margin: 0;
+    padding: 5px 10px;
+}
+
+
+
 .theader {
 	font-weight: bold;
 }
